src/tests/test-src/errors/E58-non-int-range.syntran
// E58: non-int-range
// An array range bound is not an i32 integer

let a = [1.0: 5.0];
